--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   </select>
 
   <p id="textoColor" style="margin-top:15px;font-weight:bold">
-    Este texto cambiará de color.
+    Este texto cambiará de color
   </p>
 </section>
 </main>
